SubBt/force-app/main/default/objects/Chart_of_Accounts__c/Chart_of_Accounts__c.object-meta.xml
<CustomObject>
    <label>Chart of Account</label>
    <nameField>
        <displayFormat>CA-{00000}</displayFormat>
        <label>CA #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Chart of Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>