SubBt/force-app/main/default/objects/Chart_of_Accounts__c/fields/Balance_as_Of_Date__c.field-meta.xml
<CustomField>
    <fullName>Balance_as_Of_Date__c</fullName>
    <label>Balance As Of Date</label>
    <type>Date</type>
</CustomField>