SubBt/force-app/main/default/objects/Chart_of_Accounts__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>