SubBt/force-app/main/default/objects/Chart_of_Accounts__c/fields/G_L_Code__c.field-meta.xml
<CustomField>
    <fullName>G_L_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>G/L Code</label>
    <referenceTo>GL_Account__c</referenceTo>
    <relationshipLabel>Chart of Accounts</relationshipLabel>
    <relationshipName>Chart_of_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>