SubBt/force-app/main/default/objects/Chart_of_Accounts__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Account_Type__c</columns>
    <columns>Detail_Type__c</columns>
    <columns>Balance__c</columns>
    <columns>Balance_as_Of_Date__c</columns>
    <columns>Currency__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>